# KiAssist

./: .gitignore  KICAD_INTERFACE_REFERENCE.md  README.md  UI_FRAMEWORK_RESEARCH.md  UI_PREVIEW.html  build.bat  build.sh  build_cuda.bat  execution_paln.md  index.html  installer.iss  kiassist.desktop  kiassist.spec  package-lock.json  package.json  run_kiassist.py  setup_env.bat  setup_env.sh  start.bat  start.sh  start_debug.bat  vite.config.ts
.github/agents/: scribe.md
.github/workflows/: build.yml
public/agents/: footprint-agent.md  kicad-assistant.md  pcb-agent.md  requirements-agent.md  schematic-agent.md  symbol-library-agent.md
python-lib/: README.md  pyproject.toml
python-lib/kiassist_utils/: __init__.py  api_key.py  config_keys.py  exceptions.py  gemini.py  ipc_workflow.py  kicad_ipc.py  kicad_schematic.py  local_llm.py  main.py  mcp_server.py  recent_projects.py  requirements_wizard.py  web_search.py
python-lib/kiassist_utils/ai/: __init__.py  base.py  claude.py  gemini.py  llm_logger.py  ollama.py  openai.py  tool_executor.py
python-lib/kiassist_utils/component_selection/: __init__.py  local_source.py  models.py  selector.py
python-lib/kiassist_utils/context/: __init__.py  file_cache.py  history.py  memory.py  project_context.py  prompts.py  requirements.py  tokens.py
python-lib/kiassist_utils/importer/: __init__.py  ai_symbol.py  field_normalizer.py  format_upgrade.py  kicad_lib_importer.py  lcsc_importer.py  library_index.py  library_writer.py  models.py  part_lookup.py  variant_importer.py  zip_importer.py
python-lib/kiassist_utils/kicad_parser/: __init__.py  _helpers.py  analyzer.py  footprint.py  library.py  models.py  pcb.py  schematic.py  sexpr.py  symbol_lib.py
python-lib/tests/: conftest.py  test_ai_providers.py  test_analyzer.py  test_component_selection.py  test_context.py  test_footprint_parser.py  test_importer.py  test_ipc_workflow.py  test_kicad_ipc.py  test_kicad_schematic.py  test_library_parser.py  test_local_llm.py  test_main_api.py  test_mcp_server.py  test_models.py  test_pcb_parser.py  test_requirements_manager.py  test_requirements_wizard.py  test_schematic_parser.py  test_sexpr.py  test_symbol_lib_parser.py  test_web_search.py
python-lib/tests/fixtures/: fp-lib-table  sym-lib-table  test_component_lib.kicad_sym  test_footprint.kicad_mod  test_pcb.kicad_pcb  test_schematic.kicad_sch  test_symbol_lib.kicad_sym
research/: ANALYSIS.md  CHANGELOG.md  GAPS.md  PROPOSAL.md  README.md  REFERENCES.md  REPORT.md  SCOPE.md
research/installer-packaging/: ANALYSIS.md  CHANGELOG.md  GAPS.md  PROPOSAL.md  REFERENCES.md  REPORT.md  SCOPE.md
research/kicad-ipc-windows/: ANALYSIS.md  CHANGELOG.md  GAPS.md  PROPOSAL.md  REFERENCES.md  REPORT.md  SCOPE.md
research/nng-ipc-windows/: ANALYSIS.md  CHANGELOG.md  GAPS.md  PROPOSAL.md  REFERENCES.md  REPORT.md  SCOPE.md
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: kicad_ipc.rs  lib.rs  main.rs
src/components/: ApiActivityPanel.vue  AppSettings.vue  ChatBox.vue  ComponentSearch.vue  ContextLifecyclePanel.vue  ImporterDetails.vue  KiCadInstanceSelector.vue  KicadPreview.vue  LibraryScanResults.vue  LibraryScanner.vue  LlmActivityPanel.vue  ModelPreview.vue  ProjectContextPanel.vue  RequirementsWizard.vue  SymbolFieldSettings.vue  SymbolImporter.vue  VariantImporter.vue
src/composables/: useApi.ts  useAppSettings.ts  useLibraryScanner.ts
src/types/: importer.ts  pywebview.ts
src/workers/: stepParser.worker.ts
