[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiassist-utils"
version = "0.1.0"
description = "Utility library for KiAssist - KiCAD AI Assistant"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pywebview>=5.0",
    "google-genai>=1.70.0",
    "keyring>=24.0.0",
    "kicad-python>=0.6.0",
    "mcp>=1.0.0",
    # charset-normalizer 3.4.2+ crashes on import with Python 3.12;
    # keep pinned until upstream fixes the regression.
    "charset-normalizer>=3.0,<3.4.2",
]
authors = [
    {name = "KiAssist Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/mylonics/NewKiAssist"
Repository = "https://github.com/mylonics/NewKiAssist"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyinstaller>=6.0.0",
]
ai = [
    "anthropic>=0.30.0",
    "openai>=1.30.0",
    # pydantic 2.12+ has a schema-generation regression that breaks
    # anthropic's Pydantic models on import (Python 3.12).
    "pydantic>=2.10,<2.12",
]
local-llm = [
    "llama-cpp-python[server]>=0.3.8",
]

[project.scripts]
kiassist = "kiassist_utils.main:main"
kiassist-mcp = "kiassist_utils.mcp_server:main"
