[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiassist-utils"
version = "0.1.0"
description = "Utility library for KiAssist - KiCAD AI Assistant"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pywebview>=5.0",
    "google-genai>=1.70.0",
    "keyring>=24.0.0",
    "kicad-python>=0.6.0",
    "mcp>=1.0.0",
    # charset-normalizer 3.4.2+ crashes on import with Python 3.12;
    # keep pinned until upstream fixes the regression.
    "charset-normalizer>=3.0,<3.4.2",
    # cffi 2.0 breaks clr_loader (used by pythonnet/pywebview winforms);
    # pin until clr_loader is updated for cffi 2.x.
    "cffi>=1.15,<2.0; sys_platform == 'win32'",
    "easyeda2kicad>=0.0.1",
    "cloudscraper>=1.2.0",
]
authors = [
    {name = "KiAssist Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/mylonics/NewKiAssist"
Repository = "https://github.com/mylonics/NewKiAssist"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyinstaller>=6.0.0",
    "debugpy>=1.8.0",
]
ai = [
    "anthropic>=0.30.0",
    "openai>=1.30.0",
    "pydantic>=2.10",
]
local-llm = [
    "llama-cpp-python[server]>=0.3.20",
]

# NOTE: For CUDA GPU acceleration, build from source with:
#   Windows: run build_cuda.bat (sets MSVC env + Ninja + CUDA flags)
#   Linux:   CMAKE_ARGS="-DGGML_CUDA=on" pip install llama-cpp-python[server] --force-reinstall --no-binary llama-cpp-python
# Requires: CUDA Toolkit, C++ compiler (MSVC on Windows, gcc on Linux), Ninja

[project.scripts]
kiassist = "kiassist_utils.main:main"
kiassist-mcp = "kiassist_utils.mcp_server:main"
